# Prueba-Practica-Backend---Grupo-Apok

./: .dockerignore  .env.production  README.md  curls.txt  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  dockerfile  env.example.txt  pyproject.toml  requirements.txt
app_nodos/: README.md  manage.py  swagger.json
app_nodos/app_nodos/: README.md  asgi.py  settings.py  urls.py  wsgi.py
app_nodos/middleware/: language_cache_middleware.py  timezone_middleware.py
app_nodos/nodes/: README.md  admin.py  mixins.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
app_nodos/nodes/management/commands/: seed_nodes.py
app_nodos/nodes/migrations/: 0001_initial.py  0002_alter_node_options_and_more.py  0002_node_unique_title_per_parent_and_more.py  0002_remove_node_unique_content_per_parent_and_more.py
app_nodos/users/: README.md  admin.py  apps.py  backends.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
app_nodos/users/management/commands/: seed_users.py  setup_sudo.py
app_nodos/users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_email_and_more.py
docker/django/: entrypoint-dev.sh  entrypoint-prod.sh  entrypoint.sh
postgres/: pg_hba.conf
postman/: Nodes.postman_collection.json  Token.postman_collection.json  Users.postman_collection.json
