[project]
name = "tree"
version = "0.1.0"
description = "Django project running fully on Docker"
requires-python = ">=3.12"

dependencies = [
    "Django==6.0.2",
    "django-filter==25.2",
    "djangorestframework==3.16.1",
    "Markdown==3.10.1",
    "psycopg2-binary==2.9.11",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
